k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: funlynk
  labels:
    name: funlynk
    environment: production
